--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>ControladorLogin</servlet-name>
         <servlet-class>Presentacion.ControladorLogin</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControladorCompra</servlet-name>
+        <servlet-class>Presentacion.ControladorCompra</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ControladorLogin</servlet-name>
         <url-pattern>/ControladorLogin</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControladorCompra</servlet-name>
+        <url-pattern>/ControladorCompra</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
